--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "snowball"
 version = "0.1.0"
 description = "An IRC bot framework."
 authors = ["dazzler <dazzler@riseup.net>"]
-license = "BSD-2-Clause"
+license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/dzlr/snowball"
 
