--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydle = "^0.9.1"
 "discord.py" = "^1.2"
 click = "^7.0"
 appdirs = "^1.4"
+aiohttp = "^3.5"
 
 [tool.poetry.dev-dependencies]
 poetry-setup = "^0.3.6"
