--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "An IRC bot framework."
 authors = ["dazzler <dazzler@riseup.net>"]
 license = "Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/dzlr/snowball"
+repository = "https://github.com/dazuling/snowball"
 
 [tool.poetry.scripts]
 snowball = 'snowball.__main__:cmdgroup'
