--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ discord.py (>=1.2,<2.0)
 flake8 (>=3.7,<4.0)
 gevent (>=1.4,<2.0)
 huey (>=1.10,<2.0)
+ircmessage (>=0.1.1,<0.2.0)
 isort (>=4.3,<5.0)
 poetry-setup (>=0.3.6,<0.4.0)
 pydle (>=0.9.1,<0.10.0)
