--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/dazuling/snowball"
 
 [tool.poetry.scripts]
-snowball = 'snowball.__main__:cmdgroup'
+snowball = 'snowball.__main__:main'
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -26,6 +26,9 @@ ircmessage = "^0.1.1"
 poetry-setup = "^0.3.6"
 isort = "^4.3"
 flake8 = "^3.7"
+pytest = "^5.0"
+pytest-cov = "^2.7"
+mock = "^3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
