--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ gevent (>=1.4,<2.0)
 huey (>=1.10,<2.0)
 ircmessage (>=0.1.1,<0.2.0)
 isort (>=4.3,<5.0)
+mock (>=3.0,<4.0)
 poetry-setup (>=0.3.6,<0.4.0)
 pydle (>=0.9.1,<0.10.0)
+pytest (>=5.0,<6.0)
+pytest-cov (>=2.7,<3.0)
 requests (>=2.22,<3.0)
