--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,14 @@ include_trailing_comma = true
 wrap_length = 1
 multi_line_output = 3
 
-[yapf]
-coalesce_brackets = true
-column_limit = 79
-dedent_closing_brackets = true
-split_before_first_argument = true
-split_before_expression_after_opening_paren = true
+[tool:pytest]
+norecursedirs = .git __pycache__
+
+[coverage:run]
+omit =
+    */__main__.py
+
+[coverage:report]
+exclude_lines =
+    pass
+    pragma: no cover
