--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ flake8 = "^3.7"
 pytest = "^5.0"
 pytest-cov = "^2.7"
 mock = "^3.0"
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = "=19.3b0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
