--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ click = "^7.0"
 appdirs = "^1.4"
 aiohttp = "^3.5"
 requests = "^2.22"
-ircmessage = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 poetry-setup = "^0.3.6"
@@ -30,6 +29,8 @@ pytest = "^5.0"
 pytest-cov = "^2.7"
 mock = "^3.0"
 black = "=19.3b0"
+coveralls = "^1.8"
+pytest-asyncio = "^0.10.0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
