--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/dazuling/chitanda"
 
 [tool.poetry.scripts]
-chitanda = 'chitanda.__main__:main'
+chitanda = 'chitanda.__main__:run'
 
 [tool.poetry.dependencies]
 python = "^3.7"
